<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.hike.AddFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="48dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/name1"
                android:textSize="36dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/name2"
                android:textSize="16dp"
                app:layout_constraintStart_toStartOf="@+id/title"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <EditText
                android:id="@+id/nameText"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_edittext"
                android:backgroundTint="@color/gray"
                android:fontFamily="@font/montserrat_light_italic"
                android:hint="@string/hint1"
                android:textSize="12dp"
                android:inputType="textCapWords"
                android:paddingLeft="16dp"
                app:layout_constraintStart_toStartOf="@+id/name"
                app:layout_constraintTop_toBottomOf="@+id/name" />

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/name3"
                android:textSize="16dp"
                app:layout_constraintStart_toStartOf="@+id/name"
                app:layout_constraintTop_toBottomOf="@+id/nameText" />

            <EditText
                android:id="@+id/locationText"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/hint2"
                android:fontFamily="@font/montserrat_light_italic"
                android:textSize="12dp"
                android:inputType="textCapWords"
                android:paddingLeft="16dp"
                android:background="@drawable/rounded_edittext"
                android:backgroundTint="@color/gray"
                app:layout_constraintStart_toStartOf="@+id/location"
                app:layout_constraintTop_toBottomOf="@+id/location" />

            <TextView
                android:id="@+id/dateOfTheHike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/name4"
                android:textSize="16dp"
                app:layout_constraintStart_toStartOf="@id/name"
                app:layout_constraintTop_toBottomOf="@id/locationText" />
            <TextView
                android:id="@+id/dothText"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:clickable="true"
                android:hint="@string/hint3"
                android:fontFamily="@font/montserrat_light_italic"
                android:textSize="12dp"
                android:inputType="date"
                android:paddingLeft="16dp"
                android:gravity="center_vertical"
                android:backgroundTint="@color/gray"
                android:background="@drawable/rounded_edittext"
                app:layout_constraintTop_toBottomOf="@id/dateOfTheHike"
                app:layout_constraintStart_toStartOf="@id/dateOfTheHike"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/parkingSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintStart_toStartOf="@id/dothText"
                app:layout_constraintTop_toBottomOf="@id/dothText">

                <TextView
                    android:id="@+id/parking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/name5"
                    android:textSize="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <RadioGroup
                    android:id="@+id/choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/yes"
                        android:layout_width="wrap_content"
                        android:layout_height="21dp"
                        android:layout_marginEnd="45dp"
                        android:text="Yes"
                        android:textSize="16dp"
                        />
                    <RadioButton
                        android:id="@+id/no"
                        android:layout_width="wrap_content"
                        android:layout_height="21dp"
                        android:text="No"
                        android:textSize="16dp"/>
                </RadioGroup>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/lothSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintStart_toStartOf="@id/parkingSection"
                app:layout_constraintTop_toBottomOf="@id/parkingSection">

                <TextView
                    android:id="@+id/loth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/name6"
                    android:textSize="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <EditText
                    android:id="@+id/lothText"
                    android:layout_width="150dp"
                    android:layout_height="32dp"
                    android:backgroundTint="@color/gray"
                    android:background="@drawable/rounded_edittext"
                    android:hint="@string/hint4"
                    android:fontFamily="@font/montserrat_light_italic"
                    android:textSize="12dp"
                    android:inputType="number"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:gravity="center"
                    android:orientation="horizontal"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/difficultyLevelSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintStart_toStartOf="@id/lothSection"
                app:layout_constraintTop_toBottomOf="@id/lothSection">

                <TextView
                    android:id="@+id/difficultyLevel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/name7"
                    android:textSize="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <EditText
                    android:id="@+id/dlText"
                    android:layout_width="150dp"
                    android:layout_height="32dp"
                    android:backgroundTint="@color/gray"
                    android:background="@drawable/rounded_edittext"
                    android:hint="@string/hint5"
                    android:fontFamily="@font/montserrat_light_italic"
                    android:textSize="12dp"
                    android:inputType="textCapCharacters"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:gravity="center"
                    android:orientation="horizontal"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/name8"
                android:textSize="16dp"
                app:layout_constraintStart_toStartOf="@id/name"
                app:layout_constraintTop_toBottomOf="@id/difficultyLevelSection" />

            <EditText
                android:id="@+id/descriptionText"
                android:layout_width="match_parent"
                android:layout_height="119dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/hint6"
                android:fontFamily="@font/montserrat_light_italic"
                android:textSize="12dp"
                android:paddingTop="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:gravity="start"
                android:inputType="textMultiLine"
                android:backgroundTint="@color/gray"
                android:background="@drawable/rounded_edittext"
                app:layout_constraintStart_toStartOf="@id/description"
                app:layout_constraintTop_toBottomOf="@id/description" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonAdd"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/rounded_edittext"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/buttonAdd"
                android:gravity="center_horizontal|center_vertical"
                android:textSize="12dp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/descriptionText"
                tools:layout_editor_absoluteX="20dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</FrameLayout>